--- a/DAY10/reset.css
+++ b/DAY10/reset.css
@@ -48,7 +48,15 @@ table {
 }
 img{
     display: block;
-    width:100%;
 }
 
-.blind{visibility:hidden;overflow:hidden;position:absolute;top:0;left:0;width:0;height:0;font-size:0;line-height:0}
+.blind {
+    visibility:hidden;
+    overflow:hidden;
+    position:absolute;
+    top:0;
+    left:0;
+    width:0;
+    height:0;
+    font-size:0;
+    line-height:0}
