--- a/DAY13_test/style.css
+++ b/DAY13_test/style.css
@@ -91,3 +91,11 @@
     max-width: 500px;
     width: 80%;
 }
+
+.kakao-ad {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 320px;
+    height: 100px;
+}
